List Specifications
inject tsyringe
list specs
