# src/swagger.json
@@ -1,8 +1,8 @@
 {
 	"openapi": "3.0.0",
 	"info": {
-		"title": "Rentx Documentation",
-		"description": "Rentx API documentation",
+		"title": "RentX Documentation",
+		"description": "RentX API documentation",
 		"version": "1.0.0",
 		"contect": {
 			"email": "mario.roberto1@hotmail.com"
@@ -75,7 +75,68 @@
 					}
 				}
 			}
+		},
+		"/specifications": {
+			"post": {
+				"tags": ["Specification"],
+				"summary": "Create a new specification",
+				"description": "Create a new specification",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/definitions/Specification"
+							}
+						}
+					}
+				
+				},
+				"responses": {
+					"201": {
+						"description": "Specification created"
+					},
+					"500": {
+						"description": "Specification already exists (server error)"
+					}
+				}
+			},
+			"get": {
+				"tags": ["Specification"],
+				"summary": "List all specifications",
+				"description": "Get all specifications",
+				"responses": {
+					"200": {
+						"description": "Specifications retrieved",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/definitions/Specification"
+									}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Server error"
+					}
+				}
+			}
 		}
 			
+	},
+	"definitions":{
+		"Specification": {
+			"type": "object",
+			"properties": {
+				"name": {
+					"type": "string"
+				},
+				"description": {
+					"type": "string"
+				}				
+			}
+		}
 	}
 }
